--- a/wp-content/themes/dulacdesign/scss/style.scss
+++ b/wp-content/themes/dulacdesign/scss/style.scss
@@ -32,7 +32,50 @@ h1 {
 }
 
 #nav-main {
-  display: none;
+
+  #nav-icon {
+    position: absolute;
+    top: 20px;
+    right:20px;
+  }
+
+  #navigation {
+    position: absolute;
+    display: none;
+    width: 100vw;
+    background-color: white;
+    padding: 40px;
+
+    ul {
+      padding: 0;
+
+      li {
+        text-align: center;
+        list-style: none;
+        margin-bottom: 30px;
+
+        a {
+          color: black;
+          text-transform: uppercase;
+          letter-spacing: 4px;
+          font-weight: 500;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  #social {
+    text-align: center;
+
+    a img {
+      height: 36px;
+    }
+  }
+
+  .nav-ouvert {
+    display: block !important;
+  }
 }
 
 #informations {
@@ -226,6 +269,21 @@ article.citation {
     letter-spacing: 4px;
     text-transform: uppercase;
   }
+
+  form {
+
+    input[type="text"], input[type="email"], textarea {
+      margin: 0px;
+      max-width: 100%;
+    }
+
+    p {
+      font-weight: 500;
+      color: #414042;
+      letter-spacing: 4px;
+      text-transform: uppercase;
+    }
+  }
 }
 
 .wpcf7 {
@@ -340,6 +398,7 @@ footer {
       p {
         text-align: left;
         margin-top: 30px;
+        text-transform: uppercase;
         //max-width: 90%;
         //margin: 50px auto 0;
       }
