--- a/wp-content/themes/dulacdesign/templates/base.twig
+++ b/wp-content/themes/dulacdesign/templates/base.twig
@@ -15,8 +15,15 @@
 					<h1 role="banner">
 						<a href="/" rel="home"><img src="{{ theme.path }}/logo.png" alt="{{site.name}}"></a>
 					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'menu': menu.get_items} %}
+					<nav id="nav-main">
+						<a class="nav-icon"><img src="{{ theme.path }}/nav-icon-blanc.svg"></a>
+						<div id="navigation">
+							<a class="nav-icon"><img src="{{ theme.path }}/nav-icon-noir.svg"></a>
+							{% include "menu.twig" with {'menu': menu.get_items} %}
+							<div id="social">
+								<a href="https://www.facebook.com/DulacDesign/"><img src="{{ theme.path }}/facebook.svg" alt="Dulac Design sur Facebook"></a>
+							</div>
+						</div>
 					</nav><!-- #nav -->
 				</div>
 			{% endblock %}
