--- a/wp-content/themes/dulacdesign/templates/base.twig
+++ b/wp-content/themes/dulacdesign/templates/base.twig
@@ -16,9 +16,9 @@
 						<a href="/" rel="home"><img src="{{ theme.path }}/logo.png" alt="{{site.name}}"></a>
 					</h1>
 					<nav id="nav-main">
-						<a class="nav-icon"><img src="{{ theme.path }}/nav-icon-blanc.svg"></a>
+						<a class="nav-icon"><img src="{{ theme.path }}/navigation.svg"></a>
 						<div id="navigation">
-							<a class="nav-icon"><img src="{{ theme.path }}/nav-icon-noir.svg"></a>
+							<a class="nav-icon"><img src="{{ theme.path }}/navigation-fermer.svg"></a>
 							{% include "menu.twig" with {'menu': menu.get_items} %}
 							<div id="social">
 								<a href="https://www.facebook.com/DulacDesign/"><img src="{{ theme.path }}/facebook.svg" alt="Dulac Design sur Facebook"></a>
