--- a/wp-content/themes/dulacdesign/views/page-accueil.twig
+++ b/wp-content/themes/dulacdesign/views/page-accueil.twig
@@ -24,8 +24,8 @@
   <article>
 
     <div class="blog-img droite">
-      <!-- <div style="background-image: url('{{TimberImage(post.get_field('prj1_photo')).src}}')"></div> -->
-      <img src="{{TimberImage(post.get_field('prj1_photo')).src}}">
+      <div style="background-image: url('{{TimberImage(post.get_field('prj1_photo')).src}}')"></div>
+      <!-- <img src="{{TimberImage(post.get_field('prj1_photo')).src}}"> -->
     </div>
 
     <div class="blog-contenu gauche">
