--- a/wp-content/themes/dulacdesign/templates/footer.twig
+++ b/wp-content/themes/dulacdesign/templates/footer.twig
@@ -4,7 +4,7 @@
 
     <hr>
 
-    <p>{{bloginfo('name')}} {{now|date('Y')}} | Mentions légales</p>
+    <p>{{bloginfo('name')}} {{now|date('Y')}} | <a href="mentions-legales">Mentions légales</a></p>
 
   </div>
 
