--- a/wp-content/themes/dulacdesign/templates/base.twig
+++ b/wp-content/themes/dulacdesign/templates/base.twig
@@ -13,7 +13,7 @@
 			{% block header %}
 				<div class="wrapper">
 					<h1 role="banner">
-						<a href="/" rel="home"><img src="{{ theme.path }}/logo.png" alt="{{site.name}}"></a>
+						<a href="{{ site.url }}" rel="home"><img src="{{ theme.path }}/logo.png" alt="{{site.name}}"></a>
 					</h1>
 					<nav id="nav-main">
 						<a class="nav-icon"><img src="{{ theme.path }}/navigation.svg"></a>
