--- a/wp-content/themes/dulacdesign/views/page-contact.twig
+++ b/wp-content/themes/dulacdesign/views/page-contact.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
   <div id="hero" style="background-image: url('{{TimberImage(post.get_field('img_entete')).src}}');">
-    <div id="titre-page" class="btn">
+    <div id="lien-decouvrir" class="btn">
       <a href="{{post.get_field('lien_decouvrir')}}">Découvrir</a>
     </div>
   </div>
