--- a/wp-content/themes/dulacdesign/views/page-creations.twig
+++ b/wp-content/themes/dulacdesign/views/page-creations.twig
@@ -8,24 +8,43 @@
     </div>
   </div>
 
-  <div id="ambiances">
-    <ul>
-      <li><a href="#">Ambiance 1</a></li>
-      <li><a href="#">Ambiance 2</a></li>
-      <li><a href="#">Ambiance 3</a></li>
-      <li><a href="#">Ambiance 4</a></li>
-      <li><a href="#">Ambiance 5</a></li>
-      <li><a href="#">Ambiance 6</a></li>
-    </ul>
-  </div>
+  <div class="wrapper-page">
 
-  <div id="liste-creations">
+    <div id="ambiances">
+      <ul>
+        <li><a href="#">Ambiance 1</a></li>
+        <li><a href="#">Ambiance 2</a></li>
+        <li><a href="#">Ambiance 3</a></li>
+        <li><a href="#">Ambiance 4</a></li>
+        <li><a href="#">Ambiance 5</a></li>
+        <li><a href="#">Ambiance 6</a></li>
+      </ul>
+    </div>
 
-    <div class="creation" style="background-image: url('http://placehold.it/320x250')">
-      <div class="infos">
-        <div class="titre"><a href="#">Lorem ipsum dolor sit amet consectetur</a></div>
-        <div class="date"><a href="#">20 décembre 2016</a></div>
+    <div id="liste-creations">
+
+      <div class="creation" style="background-image: url('http://placehold.it/320x250')">
+        <div class="infos">
+          <div class="titre"><a href="#">Lorem ipsum dolor sit amet consectetur</a></div>
+          <div class="date"><a href="#">20 décembre 2016</a></div>
+        </div>
       </div>
+
+      <div class="creation" style="background-image: url('http://placehold.it/320x250')">
+        <div class="infos">
+          <div class="titre"><a href="#">Lorem ipsum dolor sit amet consectetur</a></div>
+          <div class="date"><a href="#">20 décembre 2016</a></div>
+        </div>
+      </div>
+
+      <div class="creation" style="background-image: url('http://placehold.it/320x250')">
+        <div class="infos">
+          <div class="titre"><a href="#">Lorem ipsum dolor sit amet consectetur</a></div>
+          <div class="date"><a href="#">20 décembre 2016</a></div>
+        </div>
+      </div>
+
+
     </div>
 
   </div>
