--- a/wp-content/themes/dulacdesign/views/page-nos-valeurs.twig
+++ b/wp-content/themes/dulacdesign/views/page-nos-valeurs.twig
@@ -62,7 +62,7 @@
 
   <div class="texte citation"  style="background-image: url('{{TimberImage(post.get_field('citation_bg')).src}}');">
 
-    <div class="texte-centre centre-absolu">
+    <div class="texte-centre">
 
       <p>{{post.get_field('citation')}}</p>
 
